@@ -19,7 +19,7 @@ INCOMPLETE
 * `Object#finalize()`                                  - Replaces `Object#__destruct` (so that it works with `super`)
 * `Object#respond_to($method_name)`                    - Checks if the current object has `$method_name` defined and returns a boolean
 * `Object#send($method_name, $array_of_optional_args)` - Calls `$method_name` in the current object with the arguments passed to it
-* `Object#super`                                       - Calls the method that the current method overwrote (must be called inside of a method)
+* `Object#super($optional_args)`                       - Calls the method that the current method overwrote (must be called inside of a method)
 
 
 ## Usage
