@@ -1,5 +1,6 @@
 * alias_method and alias_method_chain
-* make global function "extend"
-* make Object#extended_* methods static so that extending classes only happens once instead of on instantiation
+* refactor the global extend method
+* fix extended callback
+* trigger error if super is not called within another method
 * look into __callStatic for extending static methods
 * Add real tests
