@@ -2,12 +2,17 @@
 
 class Object {
     
-    protected $extended_methods = array();
-    protected $extended_parents = array();
-    protected $extended_properties = array();
+    public static $extended_methods = array();
+    public static $extended_parents = array();
+    public static $extended_properties = array();
+    public $instance_extended_methods = array();
+    public $instance_extended_parents = array();
+    public $instance_extended_properties = array();
     
     public function __construct($arguments = null) {
-        $this->extend('Callback');
+        $this->instance_extended_methods = self::$extended_methods;
+        $this->instance_extended_parents = self::$extended_parents;
+        $this->instance_extended_properties = self::$extended_properties;
         if ($this->respond_to('initialize')) {
             $arguments = func_get_args();
             $this->send('initialize', $arguments);
@@ -19,43 +24,20 @@ class Object {
     }
     
     public function extend($args) {
-        $classes = array();
-        foreach (func_get_args() as $arg) $classes = array_merge($classes, ((is_array($arg) ? $arg : array($arg))));
-        
-        foreach (array_unique($classes) as $class) {
-            $class_name = (is_object($class)) ? get_class($class) : $class;
-            if (!class_exists($class_name)) trigger_error('Undefined class '.$class_name, E_USER_ERROR);
-                
-            if (!in_array($class_name, $this->extended_parents)) {
-                // Mixin methods
-                $methods = get_class_methods($class_name);
-                foreach ($methods as $method) {                
-                    if (!isset($this->extended_methods[$method])) $this->extended_methods[$method] = array();
-                    $this->extended_methods[$method][] = $class_name;
-                }
-            
-                // Mixin properties
-                $properties = (is_object($class)) ? get_object_vars($class) : get_class_vars($class);
-                foreach ($properties as $key => $value) {
-                    $this->extended_properties[$key] = $value;
-                }
-                
-                $this->extended_parents[] = $class_name;
-                if (in_array('extended', $methods)) eval($this->build_method_call('extended', $class_name));
-            }
-        }
+        $args = func_get_args();
+        call_user_func_array('extend', array_merge(array($this), $args));
     }
     
-    public function extended_methods() {
-        return $this->extended_methods;
+    public function instance_extended_methods() {
+        return $this->instance_extended_methods;
     }
     
-    public function extended_parents() {
-        return $this->extended_parents;
+    public function instance_extended_parents() {
+        return $this->instance_extended_parents;
     }
     
-    public function extended_properties() {
-        return $this->extended_properties;
+    public function instance_extended_properties() {
+        return $this->instance_extended_properties;
     }
     
     public function is_a($class) {
@@ -63,16 +45,16 @@ class Object {
     }
     
     public function respond_to($method) {
-        return isset($this->extended_methods[$method]) || in_array($method, get_class_methods(get_class($this)));
+        return isset($this->instance_extended_methods[$method]) || in_array($method, get_class_methods(get_class($this)));
     }
     
     public function send($method, $arguments = array()) {
         if (!$this->respond_to($method)) {
             trigger_error('Undefined method '.get_class($this).'::'.$method, E_USER_ERROR);
-        } else if (isset($this->extended_methods[$method]) && !empty($this->extended_methods[$method])) {
-            $object = array_pop($this->extended_methods[$method]);
+        } else if (isset($this->instance_extended_methods[$method]) && !empty($this->instance_extended_methods[$method])) {
+            $object = array_pop($this->instance_extended_methods[$method]);
             $result = eval($this->build_method_call($method, $object, $arguments));
-            $this->extended_methods[$method][] = $object;
+            $this->instance_extended_methods[$method][] = $object;
             return $result;
         } else {
             return call_user_func_array(array($this, $method), $arguments);
@@ -94,23 +76,23 @@ class Object {
     }
     
     protected function __get($key) {
-        if (isset($this->extended_properties[$key])) {
-            return $this->extended_properties[$key];
+        if (isset($this->instance_extended_properties[$key])) {
+            return $this->instance_extended_properties[$key];
         } else {
             trigger_error('Undefined property $'.$key, E_USER_ERROR);
         }
     }
     
     protected function __isset($key) {
-        return isset($this->extended_properties[$key]);
+        return isset($this->instance_extended_properties[$key]);
     }
     
     protected function __set($key, $value) {
-        $this->extended_properties[$key] = $value;
+        $this->instance_extended_properties[$key] = $value;
     }
     
     protected function __unset($key) {
-        unset($this->extended_properties[$key]);
+        unset($this->instance_extended_properties[$key]);
     }
     
     protected function build_method_call($method, $class = null, $arguments = array()) {
@@ -128,5 +110,7 @@ class Object {
     }
     
 }
+
+extend('Object', 'Callback');
 
 ?>
