@@ -1,5 +1,6 @@
 <?php
 
+require_once 'lib/functions.php';
 require_once 'lib/callback.php';
 require_once 'lib/object.php';
 
